[package]
name = "csv-reader"
version = "0.1.0"
edition = "2021"

[features]
default = []
logging = ["dep:tracing-subscriber"]

[dependencies]
csv = "1.3.1"
rust_decimal = "1.36.0"
serde = {version = "1.0.215", features = ["derive"]}
thiserror = "2.0.7"
tracing = "0.1.41"

tracing-subscriber = { version = "0.3.19", optional=true}
